<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_Pressurereject" Id="{ced11f52-a12d-4521-be0c-f1c6cd871b1b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Pressurereject :
(
    PressureTestFail    := 10,
    PressureTestPass    := 20,
    TAPLeakCheckFail    := 30,
    TAPLeakCheckPass    := 40,
    FailPressureCheck   := 50
       
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>